@startuml
'https://plantuml.com/class-diagram

entity "User" {
    + id: int
    --
    + name: string
    + password: string
    + role: string
}

entity "Product" {
    + id: int
    --
    + amazon_id: string
    + url: string
    + name: string
    + price: float
    + lowest_price: float;
    + average_price: float;
    + highest_price: float;
    + last_scan: datetime;
}

entity "PriceChange" {
    + id: int
    --
    + tracker_id: int
    + price: float
}

User ||--o{ Product
Product ||--o{ PriceChange

@enduml